--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ canonical: https://haoliu.github.io/
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/profile/me.jpg
-favicon: ./assets/img/fullcolorlogo_v.jpg
-favicon_dark: ./assets/img/fullcolorlogo_v.jpg
+avatar: ./assets/img/me.jpg
+favicon: ./assets/img/SDU.JPEG
+favicon_dark: ./assets/img/SDU_dark.png
 
 # Footnote
 # You may use the option to disable the footnote, "Powered by Jekyll and Minimal Light theme."
