--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -8,6 +8,14 @@ main:
     bibtex: https://ieeexplore.ieee.org/document/10890877
     image: ./assets/img/publication/CurMIM.png
 
+  - title: "Gaming for Boundary: Elastic Localization for Frame-Supervised Video Moment Retrieval"
+    authors: <strong>Hao Liu</strong>, Yupeng Hu*, Kun Wang, Yinwei Wei, Liqiang Nie
+    conference_short: SIGIR 2025
+    conference: The International ACM Conference on Research and Development in Information Retrieval <strong>(SIGIR)</strong>, 2025. <strong>(CCF-A, CORE A*)</strong>
+    pdf: 
+    bibtex: 
+    image: ./assets/img/publication/GOAL.png
+
 secondary:
 
   - title: "Explicit Granularity and Implicit Scale Correspondence Learning for Point-Supervised Video Moment Localization"
