--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -13,7 +13,7 @@ main:
     conference_short: ICASSP 2025
     conference: The International Conference on International Conference on Acoustics, Speech and Signal Processing <strong>(ICASSP)</strong>, 2025. <strong>(CCF-B)</strong>
     pdf: https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10890877
-    bibtex: https://ieeexplore.ieee.org/document/10890877
+    bibtex: https://scholar.googleusercontent.com/scholar.bib?q=info:0oLqwVOsJlwJ:scholar.google.com/&output=citation&scisdr=CgI30-JTEIfR3K9HC6k:AAZF9b8AAAAAaBdBE6kUqsv5I6tPe5mPPHxrvxs&scisig=AAZF9b8AAAAAaBdBE1oaN1l3XJbrrchrn2z15lg&scisf=4&ct=citation&cd=-1&hl=zh-CN
     image: ./assets/img/publication/CurMIM.png
 
 
